# meta-assets

./: .gitignore  docker-compose.yml
pallets/meta-assets/: Cargo.toml
pallets/meta-assets/src/: lib.rs  mock.rs  tests.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
